Adds basic styling to lots of the page
 - Also adds a couple of test blogs. One which tests
   each markdown element

 - Also adds an example blog with real content

--- a/src/components/counter/element.html
+++ b/src/components/counter/element.html
@@ -2,6 +2,6 @@
     <p>I am a counter!</p>
     <p data-role="counter">The current count is: {{count}}</p>
 
-    <button class="counter-button" data-role="increment">Increment</button>
-    <button class="counter-button" data-role="decrement">Decrement</button>
+    <button class="counter-button outline" data-role="increment">Increment</button>
+    <button class="counter-button outline" data-role="decrement">Decrement</button>
 </div>
