--- a/src/partials/meta.hbs
+++ b/src/partials/meta.hbs
@@ -1,4 +1,6 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<title>Blog</title>
+<title>{{ pageTitle }}</title>
+
+<link rel="stylesheet" href="/src/global-styling/primary-styles.scss" />
