Adds basic styling and UX components

--- a/src/components/counter/element.html
+++ b/src/components/counter/element.html
@@ -4,4 +4,6 @@
 
     <button class="counter-button outline" data-role="increment">Increment</button>
     <button class="counter-button outline" data-role="decrement">Decrement</button>
+
+    <slot></slot>
 </div>
