--- a/src/partials/blog-post.hbs
+++ b/src/partials/blog-post.hbs
@@ -11,7 +11,9 @@
         <div id="blog">{{{ content-key }}}</div>
     </main>
 
+    {{> window-scroller }}
     {{> footer }}
+    <script type="module" src="/src/global.ts"></script>
     <script type="module" src="/src/blog.ts"></script>
   </body>
 </html>
