--- a/src/partials/icons/logo.hbs
+++ b/src/partials/icons/logo.hbs
@@ -1,5 +1,5 @@
 <a class="logo-link" href="/">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 74.182 114.914" width="{{ width }}" height="{{ height }}">
+    <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 74.182 114.914" width="{{ width }}" height="{{ height }}">
         <g transform="translate(-10 -49.99)" fill-opacity=".996">
             <ellipse cx="17.501" cy="57.451" rx="4.262" ry="4.233" stroke="#ffffff" stroke-width="6.458"></ellipse>
             <ellipse cx="17.455" cy="-57.709" rx="1.241" ry="1.233" transform="scale(1 -1)" fill="#2a252a" stroke="#2a252a"
