Added base styling & structure for the homepage.
 - Blog content is not yet filled in

--- a/src/global-styling/variables.scss
+++ b/src/global-styling/variables.scss
@@ -1,4 +1,9 @@
 $background-color: #2a252a;
 $font-color: #f5f5f5;
+$primary-color: #cdacad;
+$secondary-color: #41673e;
+$accent-color: #6da68b;
+
 $header-height: 90px;
 $layer-color: #00000030;
+$layer-light-color: #ffffff1a;
