--- a/src/partials/blog-post.hbs
+++ b/src/partials/blog-post.hbs
@@ -8,7 +8,7 @@
     {{> header }}
 
     <main>
-        <div id="blog">{{{ content-key }}}</div>
+        <div id="blog" class="content">{{{ content-key }}}</div>
     </main>
 
     {{> window-scroller }}
