--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -3,9 +3,9 @@
         {{> icons/logo width=50}}
         <div class="nav-links">
             <h4 class="nav-link">
-                <a class="no-style" href="https://rossalexandra.com">
+                <a class="no-style" href="https://rossalexandra.com" target="_blank" rel="noopener noreferrer">
                     Portfolio
-                    {{> icons/external-link size=13 }}
+                    {{> icons/external-link size=18 }}
                 </a>
             </h2>
         </div>
