--- a/src/global-styling/primary-styles.scss
+++ b/src/global-styling/primary-styles.scss
@@ -151,10 +151,21 @@ main {
     flex: 1 1 0;
 
     margin-top: $header-height;
-    padding: 2rem;
-    margin-inline: auto;
-    width: fit-content;
-    max-width: min(1920px, 80vw);
+
+    .content {
+        padding: 2rem;
+        margin-inline: auto;
+        width: fit-content;
+        max-width: min(1920px, 70vw);
+
+        @media (max-width: 1550px) {
+            max-width: 90vw;
+        }
+
+        @media (max-width: 1100px) {
+            max-width: 100vw;
+        }
+    }
 }
 
 footer {
