--- a/src/main.scss
+++ b/src/main.scss
@@ -196,6 +196,10 @@ hr {
                 font-size: 1.3rem;
                 margin-bottom: 2rem;
             }
+
+            h2 {
+                margin-bottom: 0px;
+            }
         }
 
 
