--- a/src/main.scss
+++ b/src/main.scss
@@ -177,10 +177,21 @@ hr {
         grid-auto-flow: row;
         gap: 1rem;
 
+        .thumbnail {
+            position: relative;
+        }
+
         img {
             width: 100%;
             aspect-ratio: 16 / 9;
             object-fit: cover;
+        }
+
+        img.thumbnail-blur {
+            position: absolute;
+            inset: 0px;
+            z-index: -1;
+            filter: blur(10px);
         }
 
         .post-info {
