--- a/src/global-styling/blog-styles.scss
+++ b/src/global-styling/blog-styles.scss
@@ -49,7 +49,11 @@ tbody tr:nth-child(even) {
 }
 
 h1, h2, h3, h4 {
-    margin-top: 2rem;
+    margin-top: 4.5rem;
+}
+
+h1 + h2, h2 + h3, h3 + h4 {
+    margin-top: 0rem;
 }
 
 h1:first-of-type {
@@ -58,4 +62,8 @@ h1:first-of-type {
 
 #blog.content {
     width: 100%;
+}
+
+ul, ol {
+    margin-bottom: 2rem;
 }
