--- a/src/global-styling/primary-styles.scss
+++ b/src/global-styling/primary-styles.scss
@@ -14,15 +14,15 @@ html {
 }
 
 h1 {
-    font-size: 3rem;
+    font-size: 3.6rem;
 }
 
 h2 {
-    font-size: 2.6rem;
+    font-size: 2.7rem;
 }
 
 h3 {
-    font-size: 2.3rem;
+    font-size: 2.4rem;
 }
 
 h4 {
@@ -46,9 +46,18 @@ option,
 th,
 td,
 pre {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     line-height: 1.6;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.75rem;
+
+    &:has(+ ol),
+    &:has(+ ul) {
+        margin-bottom: 0.25rem;
+    }
+}
+
+li {
+    margin-bottom: 0.25rem;
 }
 
 a {
